--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "graciebs",
   "version": "0.1.0",
+  "homepage": "https://jehoopz92.github.io/GracieBs",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,13 +9,19 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "react-lazyload": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
